# agrishield

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/sample/: santa_monica_demo.geojson
docs/superpowers/plans/: 2026-05-08-wildfire-preprocessing-pipeline.md
docs/superpowers/specs/: 2026-05-08-wildfire-preprocessing-pipeline-design.md
scripts/: run_sample.sh
src/wildfire_preproc/: __init__.py  cli.py  config.py  elmfire.py  pipeline.py
src/wildfire_preproc/align/: align.py  grid.py
src/wildfire_preproc/domain/: simulation_domain.py
src/wildfire_preproc/export/: metadata.py
src/wildfire_preproc/masks/: candidate.py  non_burnable.py  protected.py
src/wildfire_preproc/optimization/: __init__.py  firebreaks.py
src/wildfire_preproc/sources/: base.py  cache.py  lfps.py  local.py  registry.py  threedep.py
src/wildfire_preproc/terrain/: derive.py
src/wildfire_preproc/utils/: env.py  geometry.py  raster.py
src/wildfire_preproc/validation/: checks.py  fbfm40_codes.py  report.py
tests/: test_align.py  test_config.py  test_elmfire.py  test_geometry.py  test_grid.py  test_masks_non_burnable.py  test_masks_protected_candidate.py  test_metadata.py  test_optimization_firebreaks.py  test_pipeline.py  test_pipeline_e2e_live.py  test_preprocessed_reuse.py  test_simulation_domain.py  test_sources_cache.py  test_sources_lfps.py  test_sources_threedep.py  test_terrain.py  test_utils_env.py  test_validation.py
web/: app.js  index.html  server.py  styles.css
